Bug 1402535 - Handle errors while checking that a module object is frozen r=evilpie